# claude-history-explorer

./: .gitignore  .workmux.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: release.py
src/: claude.rs  cli.rs  config.rs  debug_log.rs  display.rs  error.rs  fzf.rs  history.rs  main.rs  pager.rs
src/history/: loader.rs  mod.rs  parser.rs  path.rs
src/tui/: app.rs  mod.rs  search.rs  ui.rs  viewer.rs
